Update composited layer size if overflow from children requires it

If a change to an element's overflow requires
the composited layer that paints it to
expand in size then we need to make sure
that expansion happens. Before, it was assured by
layout. Now that we skip layout if overflow
is the only thing that has changed we need to
watch for the need to expand the layer when
we compute overflow.

BUG=621612

Review-Url: https://codereview.chromium.org/2098223002
Cr-Commit-Position: refs/heads/master@{#402242}

Former-commit-id: 3faa9d5121f4e933c111e8e3aca23f1fd5e3ba25